# bazel-starter

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  bazel-argo-phoenix  go.mod  pyproject.toml  requirements.txt  requirements_lock.txt  rules.bzl
.aspect/cli/: config.yaml
golang/: BUILD.bazel  main.go
python/: BUILD.bazel  main.py
test-go/: BUILD.bazel
test-py/: BUILD.bazel  main.py
test-repo/: BUILD.bazel  main.py
tools/: rules.bzl  rules_artifacts.bzl  rules_image.bzl
tools/format/: BUILD.bazel
tools/lint/: linters.bzl
