# Required to run gazelle
load("@gazelle//:def.bzl", "gazelle")
gazelle(name = "gazelle")

# required to run pip-compile hermetically
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
compile_pip_requirements(
    name = "requirements",
    src = "requirements.txt",
    requirements_txt = "requirements_lock.txt",
    extra_args = ["--allow-unsafe"],
)
