module(
    name = "argophoenix",
    repo_name = "com_argo_phoenix",
)

# https://github.com/bazelbuild/rules_python/releases.
bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")
bazel_dep(name = "container_structure_test", version = "1.16.0")
bazel_dep(name = "aspect_rules_py", version = "0.7.3")
bazel_dep(name = "rules_python", version = "0.36.0")
bazel_dep(name = "rules_oci", version = "1.8.0")
bazel_dep(name = "platforms", version = "0.0.10")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "ubuntu",
    image = "ubuntu",
    tag = "latest",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
)
use_repo(oci, "ubuntu")
