load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_tarball", "oci_push")
load("//tools:rules_image.bzl", "go_image", "REMOTE_REPOSITORY")

REPO = "test-go"

go_library(
    name = "app_lib",
    srcs = ["main.go"],
    importpath = ".",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "app",
    embed = [":app_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    srcs = [":app"],
    entrypoint = "/app",
)

oci_push(
    name = "artifact_release",
    image = ":image",
    repository = REMOTE_REPSITORY,
    remote_tags = [REPO],
)