load("@rules_python//python:defs.bzl", "py_binary")
load("@pip//:requirements.bzl", "requirement")
load("@rules_oci//oci:defs.bzl", "oci_tarball", "oci_push")
load("//tools:rules.bzl", "py_image")

py_binary(
  name = "main",
  srcs = ["main.py"],
  deps = [
      "@pip//pydantic",
      "@pip//fastapi",
  ]
)

py_image(
    name = "platform_image",
    base = "@python-bullseye",
    binary = "main",
    entrypoint = "test-py/main",
)

# $ bazel run //hello_world:tarball
# $ docker run --rm gcr.io/oci_python_main:latest
oci_tarball(
    name = "tarball",
    image = ":platform_image",
    repo_tags = ["sbolo/argo-phoenix-test:latest"],
)

oci_push(
    name = "artifact_release",
    image = ":platform_image",
    repository = "index.docker.io/sbolo/argo-phoenix-test",
    remote_tags = ["test-py"],
)