load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_oci//oci:defs.bzl", "oci_tarball", "oci_push")
load("//tools:rules_image.bzl", "py_image", "REMOTE_REPSITORY")

REPO = "test-py"

py_binary(
  name = "main",
  srcs = ["main.py"],
  deps = [
      "@pip//pydantic",
      "@pip//fastapi",
  ]
)

py_image(
    name = "image",
    binary = "main",
    entrypoint = REPO + "/main",
)

# $ bazel run //hello_world:tarball
# $ docker run --rm gcr.io/oci_python_main:latest
oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["local:" + REPO],
)

oci_push(
    name = "artifact_release",
    image = ":image",
    repository = REMOTE_REPSITORY,
    remote_tags = [REPO],
)