load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_oci//oci:defs.bzl", "oci_push", "oci_image")
load("//:py_layer.bzl", "py_oci_image")
load("//:rules.bzl", "local_image")

py_binary(
  name = "main",
  srcs = ["main.py"],
  deps = [
      "@pip//pydantic",
      "@pip//fastapi",
  ]
)

py_oci_image(
    name = "image",
    base = "@python-slim",
    binary = "main",
    entrypoint = ["test-repo/main"],
)

local_image(
    name = "tarball",
    image_target = ":image",
    tag = "sbolo/argo-phoenix-test:local"
)

oci_push(
    name = "artifact_release",
    image = ":image",
    repository = "index.docker.io/sbolo/argo-phoenix-test",
    remote_tags = ["test-repo"],
)