load("@aspect_rules_lint//format:defs.bzl", "format_multirun")

format_multirun(
    name = "format",
    python = "@aspect_rules_lint//format:ruff",
    go = "@aspect_rules_lint//format:gofumpt",
    shell = "@aspect_rules_lint//format:shfmt",
    terraform = "@aspect_rules_lint//format:terraform",
    yaml = "@aspect_rules_lint//format:yamlfmt",
    visibility = ["//:__subpackages__"],
)